tweaked choropleth tooltip fonts, fixed xaxis labels not showing on StackedBarChart

--- a/_sass/app.scss
+++ b/_sass/app.scss
@@ -1393,7 +1393,7 @@ div.career-list {
     position: relative;
     margin-top:20px;
   }
-  .projects-chart {
+  .right-separator {
     border-right: 1px solid #9d9d9d;
   }
   .contracts-chart-title {
