--- a/assets/css/visualizations.scss
+++ b/assets/css/visualizations.scss
@@ -78,7 +78,7 @@
   overflow: hidden;
 
   svg{
-    path {
+    path.country {
       stroke: white;
     }
   } 
@@ -148,6 +148,7 @@ div.tooltip {
   box-shadow: 0px 0px 2px 0px #a6a6a6; 
   opacity: 0.9; 
   position: absolute;
+  font-size: 1em;
 }
 
 // Stacked bar chart
